# tyrant

./: AGENTS.md  LICENSE  pyproject.toml
docs/adr/: 0001-game-state-plan.md  0002-roadmap-0.1.0.md  0003-custom-exceptions.md  0004-bots-plan.md  0005-core-game-loop.md
examples/: basic_usage.py
src/secret_tyrant/: game.py
src/secret_tyrant/models/: __init__.py  ballot_box.py  board.py  deck.py  election_tracker.py  enums.py  government.py  player.py
src/tyrant/: exceptions.py
src/tyrant/agents/: biased_random_agent.py  random_agent.py
src/tyrant/engine/: game_runner.py  router.py
src/tyrant/models/: action.py  agent.py  agents.py  ballot_box.py  board.py  claim.py  deck.py  election_tracker.py  enums.py  game_state.py  government.py  player.py
tests/: test_agents.py  test_ballot_box.py  test_board.py  test_deck.py  test_election_tracker.py  test_game_state.py  test_government.py  test_player.py
tests/agents/: test_biased_random_agent.py  test_random_agent.py
tests/engine/: test_game_runner.py  test_router.py
tests/models/: test_action.py  test_claim.py  test_game_state.py
