[project]
name = "tyrant"
version = "0.1.0"
description = "Secret Hitler board game implementation"
readme = "README.md"
authors = [
    { name = "Pramod Anandarao" }
]
requires-python = ">=3.15"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

