[project]
name = "tyrant"
version = "0.1.0"
description = "Secret Hitler board game implementation"
readme = "README.md"
authors = [
    { name = "Pramod Anandarao" }
]
requires-python = ">=3.13"
dependencies = [
    "frozendict>=2.4.7",
    "litellm>=1.91.0",
]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

